# robotsquiggles

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .plzconfig  BUILD  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  LICENSE  Makefile  README.md  asset-manifest.json  index.html  manifest.json  pyproject.toml  requirements.txt  run_clang_format.sh  run_cmake_unix.sh  run_tests_macos.sh
.github/workflows/: build.yml  deploy.yml  format.yml  main.yml  memcheck.yml
build_defs/: BUILD  test_cov.build_defs
cmake/: squiggles.pc.in
docs/: BUILD  Makefile  conf.py  constraints.rst  controller-suggestions.rst  example-paths.rst  index.rst  installation.rst  maths.rst  physical-models.rst  resources.rst  sphinx_build.py  sphinx_build.sh
docs/release-notes/: 0.1.0.rst  index.rst
include/: constraints.hpp  controlvector.hpp  io.hpp  mathutils.hpp  pathposition.hpp  polynomial.hpp  pose.hpp  pythoncompat.hpp  spline.hpp  squiggles.h  squiggles.hpp
include/geometry/: controlvector.hpp  generatedpoint.hpp  pose.hpp  profilepoint.hpp
include/math/: quinticpolynomial.hpp  utils.hpp
include/physicalmodel/: passthroughmodel.hpp  physicalmodel.hpp  tankmodel.hpp
js/: squiggles.worker.js
lib/: BUILD  emcc.build_defs
lib/src/: CMakeLists.txt  quinticpolynomial.cpp  spline.cpp
lib/viscompat/: compat.cpp
main/: BUILD
main/include/: constraints.hpp  spline.hpp
main/src/: CMakeLists.txt  io.cpp  main.cpp  spline.cpp  tankmodel.cpp
main/test/: CMakeLists.txt  impose-limits-test.cpp  io-test.cpp  model-constraints-test.cpp  plan-path-test.cpp  shared.hpp  short-path-test.cpp
main/viscompat/: compat.cpp  compat.hpp
src/: CMakeLists.txt  io.cpp  main.c  main.cpp  mathutils.cpp  polynomial.cpp  pythoncompat.cpp  quinticpolynomial.cpp  spline.cpp  squiggles.cpp  squiggles.h  tankmodel.cpp
static/css/: main.9289626b.chunk.css  main.9289626b.chunk.css.map
static/js/: 153.2c1c7113.chunk.js  153.2c1c7113.chunk.js.map  153.4283a40b.chunk.js  153.4283a40b.chunk.js.map  153.48c46a4b.chunk.js  153.48c46a4b.chunk.js.map  153.4b91d6d1.chunk.js  153.4b91d6d1.chunk.js.map  153.76536c88.chunk.js  153.76536c88.chunk.js.map  153.e84e8f22.chunk.js  153.e84e8f22.chunk.js.map  154.028972f6.chunk.js  154.028972f6.chunk.js.map  154.0cedf432.chunk.js  154.0cedf432.chunk.js.map  154.1770cc47.chunk.js  154.1770cc47.chunk.js.map  154.87c4cd36.chunk.js  154.87c4cd36.chunk.js.map  155.3514a702.chunk.js  155.3514a702.chunk.js.map  155.6f4d3041.chunk.js  155.6f4d3041.chunk.js.map  155.8442e804.chunk.js  155.8442e804.chunk.js.map  155.a76364ab.chunk.js  155.a76364ab.chunk.js.map  main.0e25f0b1.chunk.js  main.0e25f0b1.chunk.js.map  main.12db2e96.chunk.js  main.12db2e96.chunk.js.map  main.1e54f69e.chunk.js  main.1e54f69e.chunk.js.map  main.52dbb35d.chunk.js  main.52dbb35d.chunk.js.map  main.bd56241f.chunk.js  main.bd56241f.chunk.js.map  main.dc313b40.chunk.js  main.dc313b40.chunk.js.map  (+1216 more)
tools/: BUILD
tst/: CMakeLists.txt  impose-limits-test.cpp  io-test.cpp  model-constraints-test.cpp  plan-path-test.cpp  spline-test.cpp  squiggles-test.cpp
vis/: BUILD  compat.cpp  compat.hpp  cubic_spline.py  plot.py  quintic_spline.py
wasm/: BUILD  web_shim.cpp
web/: BUILD  build_squiggles.sh  field.js  hello.c  next.config.js  package-lock.json  package.json  squiggles.html  three-example.html  two.js  url.js  web_shim.cpp
web-old/: package-lock.json
web-old/public/: squiggles.wasm
web-old/src/: index.tsx
web-react/: .eslintcache  package-lock.json  package.json
web-react/src/: App.tsx  app.tsx  index.tsx  theme.js
web-react/src/components/: field.jsx  generated.tsx  index.ts  new_path.jsx  path.jsx  sidebar.tsx
web-react/src/three/: spline-example.jsx  test.jsx
web/components/: generated.jsx  new_path.jsx  sidebar.jsx
web/pages/: _app.js  _document.js  index.js
web/public/: index.html  squiggles.js
web/public/js/: cv.worker.js  squiggles.js  squiggles.worker.js
web/services/: cv.js  squiggles.js
web/src/: app.tsx  index.css  index.tsx  worker.ts
web/src/components/: field.jsx  generated.tsx  models.ts  new_path.jsx  sidebar.tsx  units.tsx
web/src/components/redux/: index.ts  slice.ts  state.ts  store.ts
web/src/services/: coords.ts  squiggles.js
web/src/wasm/: squiggles.js
