[tool.poetry]
name = "vis"
version = "0.1.0"
description = ""
authors = ["Jonathan Bayless <baylessj@purdue.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cubic-spline = "vis.cubic_spline:main"
quintic-spline = "vis.quintic_spline:main"
cdll = "vis.plot:main"