[tool.poetry]
name = "vis"
version = "1.0.0"
description = ""
authors = ["Jonathan Bayless <baylessjonathan@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
exhale = "^0.2.3"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cdll = "vis.plot:main"
