[tool.poetry]
name = "vis"
version = "1.0.0"
description = ""
authors = ["Jonathan Bayless <baylessjonathan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.2"
sphinx-rtd-theme = "^1.0.0"
exhale = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vis = "vis.plot:main"
